# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
gendiff/: __init__.py  gendiff.py  parse.py  parsing_files.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
