[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Oleg Golubev <oleg.golubev74@gmail.com>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
