[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = [
	{ name = "Oleg Golubev", email = "golubev_oleg@inbox.ru" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.11.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"
